fix(tipsy): removed z-index from tipsy

--- a/packages/Tipsy/src/Tipsy.scss
+++ b/packages/Tipsy/src/Tipsy.scss
@@ -3,7 +3,6 @@
 }
   
 [data-reach-tooltip] {
-    z-index: 1;
     pointer-events: none;
     position: absolute;
 }
